--- a/src/scss/themes/black-theme.scss
+++ b/src/scss/themes/black-theme.scss
@@ -1,9 +1,9 @@
-$app-black-primary: mat-palette($mat-grey, 700, 300, 900);
-$app-black-accent: mat-palette($mat-blue-grey, 400);
-$app-black-warn: mat-palette($mat-red, 500);
+$app-black-primary: mat.define-palette(mat.$grey-palette, 700, 300, 900);
+$app-black-accent: mat.define-palette(mat.$blue-grey-palette, 400);
+$app-black-warn: mat.define-palette(mat.$red-palette, 500);
 
 
-$app-black-theme: mat-dark-theme(
+$app-black-theme: mat.define-light-theme(
   $app-black-primary,
   $app-black-accent,
   $app-black-warn
