--- a/src/scss/themes/default-theme.scss
+++ b/src/scss/themes/default-theme.scss
@@ -1,4 +1,7 @@
-// Cree un tema principal 
+@use '@angular/material' as mat;
+@include mat.core();
+// Cree un tema principal
+
 $yess-pallete: (
 50: #e4f0f4,
 100: #bddae5,
@@ -15,30 +18,30 @@ A200: #b0bec5,
 A400: #78909c,
 A700: #455a64,
 contrast: (
-50: $dark-primary-text,
-100: $dark-primary-text,
-200: $dark-primary-text,
-300: $dark-primary-text,
-400: $light-primary-text,
-500: $light-primary-text,
-600: $light-primary-text,
-700: $light-primary-text,
-800: $light-primary-text,
-900: $light-primary-text,
-A100: $dark-primary-text,
-A200: $dark-primary-text,
-A400: $light-primary-text,
-A700: $light-primary-text,
+50: mat.$private-dark-primary-text,
+100: mat.$private-dark-primary-text,
+200: mat.$private-dark-primary-text,
+300: mat.$private-dark-primary-text,
+400: white,
+500: white,
+600: white,
+700: white,
+800: white,
+900: white,
+A100: mat.$private-dark-primary-text,
+A200: mat.$private-dark-primary-text,
+A400: white,
+A700: white,
 )
 );
-$app-default-primary: mat-palette($yess-pallete, 900);
+$app-default-primary: mat.define-palette($yess-pallete, 900);
 //$app-default-primary: mat-palette($yess-pallete,900, 300, 700);
 
 //$app-default-primary: mat-palette($mat-blue, 900);
-$app-default-accent: mat-palette($mat-orange, 800);
-$app-default-warn: mat-palette($mat-red, 500);
+$app-default-accent: mat.define-palette(mat.$orange-palette, 800);
+$app-default-warn: mat.define-palette(mat.$red-palette, 500);
 
-$app-default-theme: mat-light-theme(
+$app-default-theme: mat.define-light-theme(
   $app-default-primary,
   $app-default-accent,
   $app-default-warn
