--- a/src/app/@core/breadcrumbs/breadcrumbs.component-theme.scss
+++ b/src/app/@core/breadcrumbs/breadcrumbs.component-theme.scss
@@ -1,22 +1,23 @@
-@import '~@angular/material/theming';
+@use '@angular/material' as mat;
+@use "sass:map";
 
 @mixin ngx-breadcrumbs-component-theme($theme) {
-  $config: mat-typography-config();
+  $config: mat.define-typography-level();
 
   $spacing: 24px;
   // $theme-foreground-map: map-get($theme, foreground);
   // $theme-secondary-text: mat-color($theme-foreground-map, secondary-text);
   // $theme-text: mat-color($theme-foreground-map, text);
 
-  $primary: map-get($theme, primary);
-  $theme-secondary-text: mat-color($primary, default-contrast);
-  $theme-text: mat-color($primary, default-contrast);
+  $primary: map.get($theme, primary);
+  $theme-secondary-text: mat.get-color-from-palette($primary, default-contrast);
+  $theme-text: mat.get-color-from-palette($primary, default-contrast);
 
 
 
   ngx-breadcrumbs {
     .title {
-      @include mat-typography-level-to-styles($config, title);
+      @include mat.define-typography-level($config, title);
       font-weight: 400;
     }
 
@@ -27,7 +28,7 @@
       transition: color $swift-ease-out-duration $swift-ease-out-timing-function;
       text-transform: capitalize;
 
-      @include mat-typography-level-to-styles($config, caption);
+      @include mat.define-typography-level($config, caption);
 
       &:hover {
         color: $theme-text;
