--- a/src/app/@core/toolbar/components/search-bar/search-bar.component.scss
+++ b/src/app/@core/toolbar/components/search-bar/search-bar.component.scss
@@ -1,7 +1,8 @@
+@use '@angular/material' as mat;
 @import '../../../../../scss/var';
-@import '~@angular/material/theming';
 
-$config: mat-typography-config();
+
+$config: mat.define-typography-config();
 
 :host {
   display: block;
