--- a/src/app/@core/toolbar/components/user-menu/user-menu.component.scss
+++ b/src/app/@core/toolbar/components/user-menu/user-menu.component.scss
@@ -1,6 +1,7 @@
+@use '@angular/material' as mat;
 @import '../../../../../scss/var';
 @import '../../../../../scss/constants';
-@import '~@angular/material/theming';
+
 
 .user-container {
   height: 100%;
@@ -49,7 +50,7 @@
     visibility: hidden;
     transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), visibility 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 
-    @media ($mat-xsmall) {
+    @media (max-width: 599.98px) {//--- $mat-xsmall
       top: $mat-toolbar-height-mobile-portrait;
     }
 
