--- a/src/app/@core/toolbar/toolbar.component.scss
+++ b/src/app/@core/toolbar/toolbar.component.scss
@@ -1,6 +1,7 @@
-@import '~@angular/material/theming';
+@use '@angular/material' as mat;
 
-$config: mat-typography-config();
+// $config: mat-typography-config();
+$config: mat.define-typography-config();
 
 @import '../../../scss/fu/var';
 
