--- a/src/scss/styles-app-loading.scss
+++ b/src/scss/styles-app-loading.scss
@@ -2,6 +2,6 @@
   .logo {
     width: 24px;
     height: 36px;
-    background: url(assets/logo24.png) center center no-repeat;
+    background: url(../assets/logo24.png) center center no-repeat;
   }
 }
