--- a/src/scss/themes/elements/button-toggle-theme.scss
+++ b/src/scss/themes/elements/button-toggle-theme.scss
@@ -1,7 +1,11 @@
+@use '@angular/material' as mat;
+@use "sass:map";
+@include mat.core();
+
 @mixin button-toggle-theme($theme) {
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
-  $warn: map-get($theme, warn);
+  $primary: map.get($theme, primary);
+  $accent: map.get($theme, accent);
+  $warn: map.get($theme, warn);
 
   .mat-button-toggle {
     // background-color: mat-color($primary);
@@ -11,8 +15,8 @@
   .mat-button-toggle-checked {
     // background-color: mat-color($accent);
     // color: mat-color($accent, default-contrast);
-    background-color: mat-color($primary);
-    color: mat-color($primary, default-contrast) !important;
+    background-color: mat.get-color-from-palette($primary);
+    color: mat.get-color-from-palette($primary, default-contrast) !important;
   }
 
 }
