--- a/src/scss/themes/elements/table-theme.scss
+++ b/src/scss/themes/elements/table-theme.scss
@@ -1,20 +1,22 @@
 // estilo mat-card
+@use "sass:map";
+
 @mixin table-theme($theme) {
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
-  $warn: map-get($theme, warn);
+  $primary: map.get($theme, primary);
+  $accent: map.get($theme, accent);
+  $warn: map.get($theme, warn);
 
   table.mat-table {
     th {
       border-top: 2px solid rgba(0, 0, 0, 0.12);
       border-radius:3px;
       font-weight: bold;
-          
+
     }
 
     tr.mat-header-row {
       height: 48px;
-      
+
     }
   }
 
@@ -23,14 +25,14 @@
     .mat-sort-header-container {
       justify-content: center;
       color: #454342;
-      text-align: center; 
+      text-align: center;
 
-      
+
     }
 
     tr.mat-header-row {
       height: 48px;
-      
+
     }
 
     th,
