--- a/src/scss/themes/light-theme.scss
+++ b/src/scss/themes/light-theme.scss
@@ -1,8 +1,8 @@
-$app-light-primary: mat-palette($mat-grey, 200, 500, 300);
-$app-light-accent: mat-palette($mat-brown, 200);
-$app-light-warn: mat-palette($mat-deep-orange, 200);
+$app-light-primary: mat.define-palette(mat.$grey-palette, 200, 500, 300);
+$app-light-accent: mat.define-palette(mat.$brown-palette, 200);
+$app-light-warn: mat.define-palette(mat.$deep-orange-palette, 200);
 
-$app-light-theme: mat-light-theme(
+$app-light-theme: mat.define-light-theme(
   $app-light-primary,
   $app-light-accent,
   $app-light-warn
