--- a/src/app/@core/toolbar/components/user-menu/user-menu.component.html
+++ b/src/app/@core/toolbar/components/user-menu/user-menu.component.html
@@ -1,27 +1,22 @@
-<div class="user-container"
-     #userButton
-     (ngxClickOutside)="onClickOutside()">
-  <button class="user-button"
-          mat-button
-          (click)="toggleDropdown()"
-          [class.open]="isOpen">
-    <span fxLayout="row"
-          fxLayoutAlign="start center">
+<div class="user-container" #userButton (ngxClickOutside)="onClickOutside()">
+  <button
+    class="user-button"
+    mat-button
+    (click)="toggleDropdown()"
+    [class.open]="isOpen"
+  >
+    <span fxLayout="row" fxLayoutAlign="start center">
       <mat-icon class="">account_circle</mat-icon>
       <!-- <img class="user-avatar"
            [src]="currentUser?.nombreUsuario || 'assets/img/avatars/noavatar.png'"> -->
-      <span class="name"
-            fxHide
-            fxShow.gt-sm>{{currentUser?.nombreUsuario ||
-        'Sumo Demo'}}</span>
-      <mat-icon class="icon"
-                fxHide
-                fxShow.gt-sm>keyboard_arrow_down</mat-icon>
+      <span class="name" fxHide fxShow.gt-sm>{{
+        currentUser.nombreUsuario || "Sumo Demo"
+      }}</span>
+      <mat-icon class="icon" fxHide fxShow.gt-sm>keyboard_arrow_down</mat-icon>
     </span>
   </button>
 
-  <div class="dropdown mat-elevation-z1"
-       [class.open]="isOpen">
+  <div class="dropdown mat-elevation-z1" [class.open]="isOpen">
     <div class="content">
       <mat-nav-list>
         <mat-list-item>
@@ -54,5 +49,4 @@
       </mat-nav-list>
     </div>
   </div>
-
 </div>
