--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -33,7 +33,7 @@
 @import '../app/@core/breadcrumbs/breadcrumbs.component-theme.scss';
 
 // @import '../app/@shared/nav-bar/nav-bar-theme';
-
+@import '@danielmoncada/angular-datetime-picker/assets/style/picker.min.css';
 // @import "ng-pick-datetime/assets/style/picker.min.css";
 
 
