upgrade styles -> - pages

--- a/src/app/@core/toolbar/toolbar.component.scss
+++ b/src/app/@core/toolbar/toolbar.component.scss
@@ -1,9 +1,9 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 // $config: mat-typography-config();
 $config: mat.define-typography-config();
 
-@import '../../../scss/fu/var';
+@import "../../../scss/fu/var";
 
 :host {
   z-index: $toolbar-z-index;
@@ -14,7 +14,7 @@ $config: mat.define-typography-config();
   // background: $toolbar-background;
   padding-right: 0;
   height: $toolbar-height;
-  padding-left: $spacing/1.5;
+  padding-left: calc($spacing/1.5);
   max-width: 100%;
 
   // @include mat-elevation($toolbar-elevation);
@@ -22,7 +22,6 @@ $config: mat.define-typography-config();
   .button {
     border-left: 1px solid rgba(0, 0, 0, 0.08);
     display: flex;
-
   }
 
   .button-center {
@@ -33,6 +32,6 @@ $config: mat.define-typography-config();
   }
 
   @include media-xs {
-    padding-left: $spacing/3;
+    padding-left: calc($spacing/3);
   }
 }
