--- a/src/app/@core/toolbar/components/search-bar/search-bar.component.html
+++ b/src/app/@core/toolbar/components/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 <div class="search-wrapper" fxLayout="row" [ngClass]="{ 'focus': focused, 'has-input': input }"
      fxFlex (ngxClickOutside)="closeDropdown()">
   <mat-icon class="search-icon">search</mat-icon>
-  <input #searchInput type="search" autocomplete="off" spellcheck="false" class="search-input"
+  <input matInput #searchInput type="search" autocomplete="off" spellcheck="false" class="search-input"
          (focus)="openDropdown()" placeholder="Buscar...">
 
   <div class="search-dropdown mat-elevation-z1">
