--- a/src/app/@core/loading/loading.component-theme.scss
+++ b/src/app/@core/loading/loading.component-theme.scss
@@ -1,10 +1,13 @@
+@use '@angular/material' as mat;
+@use "sass:map";
+
 @mixin loading-component-theme($theme) {
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
-  $warn: map-get($theme, warn);
+  $primary: map.get($theme, primary);
+  $accent: map.get($theme, accent);
+  $warn: map.get($theme, warn);
 
   .cl-primary {
-    color: mat-color($primary);
+    color: mat.get-color-from-palette($primary);
   }
 
   .modal-loading .mat-dialog-container {
@@ -12,7 +15,7 @@
     background: transparent;
   }
   .modal-loading-backdrop {
-    background-color: mat-color($primary, default-contrast);
+    background-color: mat.get-color-from-palette($primary, default-contrast);
     opacity: 0.7 !important;
   }
 }
