--- a/src/app/@core/side-nav/sidenav.component.scss-theme.scss
+++ b/src/app/@core/side-nav/sidenav.component.scss-theme.scss
@@ -1,12 +1,16 @@
+@use '@angular/material' as mat;
+@use "sass:map";
+@include mat.core();
+
 @mixin ngx-sidenav-component-theme($theme) {
-  $primary: map-get($theme, primary);
-  $warn: map-get($theme, warn);
-  $background: map-get($theme, background);
-  $foreground: map-get($theme, foreground);
+  $primary: map.get($theme, primary);
+  $warn: map.get($theme, warn);
+  $background: map.get($theme, background);
+  $foreground: map.get($theme, foreground);
 
 
-  $color__sidenav-list: mat-color($primary, default-contrast);
-  $background-color__sidenav-list: mat-color($primary);
+  $color__sidenav-list: mat.get-color-from-palette($primary, default-contrast);
+  $background-color__sidenav-list: mat.get-color-from-palette($primary);
 
   $background-color__sidenav-list__hover: darken($background-color__sidenav-list, 2);
   $background-color__sidenav-list__active: $background-color__sidenav-list__hover;
@@ -48,7 +52,7 @@
     }
 
     mat-toolbar.mat-toolbar.sidenav-toolbar {
-      background: mat-color($primary);
+      background: mat.get-color-from-palette($primary);
 
       .text-logo,
       mat-icon {
@@ -74,13 +78,13 @@
 
         &:hover {
           // color: #ffffff;
-          color: mat-color($primary, default-contrast);
+          color: mat.get-color-from-palette($primary, default-contrast);
           // background: mat-color($primary, 600);
         }
 
         &.active {
           // color: #ffffff;
-          color: mat-color($primary, default-contrast);
+          color: mat.get-color-from-palette($primary, default-contrast);
           // background: mat-color($primary, 600);
         }
       }
