--- a/src/scss/fu/_var.scss
+++ b/src/scss/fu/_var.scss
@@ -35,7 +35,8 @@ $theme: mat.define-light-theme(
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 
-@include mat.all-component-themes($theme);
+// @include angular-material-theme($theme);
+
 
 /**
  USAGE:
